--- a/index.html
+++ b/index.html
@@ -11,14 +11,31 @@
   <header>
   </header>
   <main>
+    <table>
+      <tr>
+        <th>Имя</th>
+        <th>Телефон</th>
+        <th></th>
+      </tr>
+    </table>
+    <form name="userData">
+      <input type="text" name="name" placeholder="Имя" required>
+      <input type="tel" name="phone" placeholder="Телефон" required
+      pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}">
+      <button type="submit">Сохранить</button>
+    </form>
     
   </main>
   <footer>
   </footer>
   <script src="./scripts/index.js" defer></script>
 
-  <template id="">
-
+  <template id="template_cell">
+    <tr>
+      <td class="cell_name"></td>
+      <td class="cell_phone"></td>
+      <td class="cell_buttons"><button>Редактировать</button><button>Удалить</button></td>
+    </tr>
   </template>
 </body>
 </html>
