--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <th></th>
       </tr>
     </table>
-    <form name="userData">
+    <form name="userData" class="user-data-form">
       <input type="text" name="name" placeholder="Имя" required>
-      <input type="tel" name="phone" placeholder="Телефон" required
-      pattern="\+7\-[0-9]{3}\-[0-9]{3}\-[0-9]{2}\-[0-9]{2}">
+      <input type="tel" name="phone" placeholder="Телефон" required>
       <button type="submit">Сохранить</button>
+      <div class="error-massage"></div>
     </form>
     
   </main>
@@ -32,9 +32,16 @@
 
   <template id="template-table-row">
     <tr class="template-row">
-      <td class="cell-name"></td>
-      <td class="cell-phone"></td>
+      <td class="cell-name">
+        <span class="cell-name-value"></span>
+        <input class="cell-name-input" type="text" name="name" placeholder="Имя" required>
+      </td>
+      <td class="cell-phone">
+        <span class="cell-phone-value"></span>
+        <input class="cell-phone-input" type="tel" name="phone" placeholder="Телефон" required>
+      </td>
       <td class="cell-buttons">
+        <button class="cell-save-btn" type="submit">Сохранить</button>
         <button class="cell-edit-btn">Редактировать</button>
         <button class="cell-delete-btn">Удалить</button>
       </td>
