--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <title>Телефонная книга</title>
+  <title>Список пользователей</title>
   <link rel="stylesheet" href="./styles/index.css">
 </head>
 <body>
