--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <input class="cell-phone-input" type="tel" name="phone" placeholder="Телефон" required>
       </td>
       <td class="cell-buttons">
-        <button class="cell-save-btn" type="submit">Сохранить</button>
+        <button class="cell-save-btn">Сохранить</button>
         <button class="cell-edit-btn">Редактировать</button>
         <button class="cell-delete-btn">Удалить</button>
       </td>
