--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <header>
   </header>
   <main>
+    <form name="editUserData" class="edit-user-form">
     <table class="user-table">
       <tr>
         <th>Имя</th>
@@ -18,6 +19,7 @@
         <th></th>
       </tr>
     </table>
+  </form>
     <form name="userData" class="user-data-form">
       <input type="text" name="name" placeholder="Имя" required>
       <!--Паттерн для российского номера с тире (без скобочек): ((8|\+7))[-]{0,1}9[0-9]{2}[-]{0,1}\s?\d{3}[-]{0,1}\d{2}[-]{0,1}\d{2}
@@ -35,21 +37,18 @@
     <tr class="template-row">
       <td class="cell-name read-mode">
         <span class="cell-name-value"></span>
+        <input class="cell-name-input" type="text" name="name" placeholder="Имя" required>
       </td>
       <td class="cell-phone read-mode">
         <span class="cell-phone-value"></span>
+        <input class="cell-phone-input" type="tel" name="phone" placeholder="Телефон" required pattern="^([0-9]|\+)?([0-9]|[-])+?[0-9]$">
       </td>
       <td class="cell-buttons read-mode">
-        <button class="cell-edit-btn">Редактировать</button>
-        <button class="cell-delete-btn">Удалить</button>
-      </td>
-      <td colspan="3" class="template-cell-edit-mode">
-        <form name="editUserData" class="edit-user-form">
-          <input class="cell-name-input" type="text" name="name" placeholder="Имя" required>
-          <input class="cell-phone-input" type="tel" name="phone" placeholder="Телефон" required pattern="^([0-9]|\+)?([0-9]|[-])+?[0-9]$">
-          <button type="submit" class="cell-save-btn">Сохранить</button>
-          <button class="cell-cancel-btn">Отмена</button>
-        </form>
+        <button type="button" class="cell-edit-btn btn-read-mode">Редактировать</button>
+        <button type="button" class="cell-delete-btn btn-read-mode">Удалить</button>
+
+        <button type="submit" class="cell-save-btn btn-edit-mode">Сохранить</button>
+        <button type="button" class="cell-cancel-btn btn-edit-mode">Отмена</button>
       </td>
     </tr>
   </template>
